--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <h1>Are You Ready?</h1>
             <a href="game.html" class="btn">Play</a>
             <a href="Highscores.html" id="highscore-btn" class="btn">High Scores</a>
+            <a href="end.html"></a>
         </div>
     </div>    
 </body>
